tests/agl/rejections/type/inference_context_not_evidence.agl
def id[T](x: T) -> T = x
let value: text = id(1)
value
